# emanmoustafa

./: CMakeLists.txt
arrays/: AnalyzeDNA  AnalyzeECG  analyzeDNA.cpp  analyzeECG.cpp  arrays.hpp  calculator.cpp  dna.hpp  ecg.hpp  heron.cpp  mathematics.hpp  run  txt
basics/: app  main1.cpp  run
heap/: run
memory/:  app1  main.cpp
